# Django-Admin

./: .gitignore  README.md
movies_admin/: README.md  pyproject.toml
movies_admin/config/: settings.py
movies_admin/movies/migrations/: 0001_initial.py
schema_design/: README.md
sqlite_to_postgres/: README.md  load_data.py  pyproject.toml
